--- a/login.html
+++ b/login.html
@@ -8,7 +8,8 @@
 	<link rel="stylesheet" href="css/common.css" />
 </head>
 <body>
-	<div class="">
+<div class="toysi-page">
+	<div class="toysi-white-bg">
 		<div class="container text-center">
 			<a class="toysi-margin-logo-center" href="/"><img src="images/logo.png" width="127" height="94" title="" alt="" /></a>
 		</div>
@@ -18,19 +19,74 @@
 			<h1 class="toysi-login-page-container toysi-title-page">Вход</h1>
 		</div>
 	</div>
-	<div class="">
+	<div class="toysi-white-bg">
 		<div class="container">
 			<div class="toysi-login-page-container">
 				<form class="form-horizontal">
-					<div class="form-group">
-						<input class="form-control" name="tsLogin" placeholder="Логин" value="" />
+					<div class="toysi-form-group form-group">
+						<div class="toysi-login-input-width">
+							<input class="toysi-form-control form-control" name="tsLogin" placeholder="Логин" value="" />
+						</div>
 					</div>
-					<div class="form-group">
-						<input class="form-control" name="tsPass" placeholder="Пароль" value="" />
+					<div class="toysi-form-group form-group">
+						<div class="toysi-login-input-width">
+							<input class="toysi-form-control form-control" name="tsPass" placeholder="Пароль" value="" />
+						</div>
+					</div>
+					<div class="toysi-form-group form-group">
+						<button type="submit" class="toysi-btn toysi-btn-red btn pull-left">Войти</button>
+						<div class="toysi-pull-left pull-left">
+							<div class="toysi-checkbox-control">
+								<input type="checkbox" name="tsRememberPass" id="tsRememberPass" checked />
+								<label for="tsRememberPass">запомнить пароль</label>
+							</div>
+							<a href="#" class="toysi-dashed toysi-password-reset">Восстановить пароль</a>
+						</div>
 					</div>
 				</form>
 			</div>
 		</div>
 	</div>
+	<div class="toysi-blue-bg">
+		<div class="container">
+			<div class="toysi-password-reset-container hide">
+				<div class="row">
+					<h2 class="toysi-title pull-left">Восстановление пароля</h2>
+					<a class="toysi-close glyphicon glyphicon-remove"></a>
+				</div>
+				<div class="form-horizontal">
+					<div class="toysi-form-group form-group">
+						<div class="toysi-password-reset-input-width">
+							<input class="toysi-form-control form-control" name="tsEmail" placeholder="Емайл" value="" />
+						</div>
+					</div>
+					<div class="toysi-form-group form-group">
+						<button type="submit" class="toysi-btn toysi-btn-red btn pull-left">Восстановить</button>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	<div class="toysi-white-bg toysi-height-5px"></div>
+	<div class="toysi-footer toysi-blue-bg">
+		<div class="container">
+			<p class="pull-left">© 2012–2013 Toysi.com.ua</p>
+			<ul class="toysi-nav pull-left">
+				<li class="active"><a>О Компании</a></li>
+				<li><a>Cотрудничество</a></li>
+				<li><a>Контакты</a></li>
+			</ul>
+			<div class="toysi-footer-contact pull-right">
+				<p>ул. Алма-Атинская, 35а.<br />Склад №7</p>
+			</div>
+			<div class="toysi-footer-contact pull-right">
+				<p>+38 067 543 03 40<br />+38 067 566 87 66<br />+38 067 628 41 00</p>
+			</div>
+		</div>
+	</div>
+</div>
+<script src="js/jquery-1.11.1.js" type="text/javascript"></script>
+<script src="js/common.js" type="text/javascript"></script>
+<script src="js/login.js" type="text/javascript"></script>
 </body>
 </html>
