--- a/login.html
+++ b/login.html
@@ -6,6 +6,7 @@
 	<link rel="stylesheet" href="css/bootstrap.min.css" />
 	<link rel="stylesheet" href="css/bootstrap-theme.min.css" />
 	<link rel="stylesheet" href="css/common.css" />
+	<link rel="stylesheet" href="css/login.css" />
 </head>
 <body>
 <div class="toysi-page">
@@ -70,7 +71,7 @@
 	<div class="toysi-white-bg toysi-height-5px"></div>
 	<div class="toysi-footer toysi-blue-bg">
 		<div class="container">
-			<p class="pull-left">© 2012–2013 Toysi.com.ua</p>
+			<p class="pull-left">© 2012–2014 Toysi.com.ua</p>
 			<ul class="toysi-nav pull-left">
 				<li class="active"><a>О Компании</a></li>
 				<li><a>Cотрудничество</a></li>
