--- a/login.html
+++ b/login.html
@@ -26,12 +26,12 @@
 				<form class="form-horizontal">
 					<div class="toysi-form-group form-group">
 						<div class="toysi-login-input-width">
-							<input class="toysi-form-control form-control" name="tsLogin" placeholder="Логин" value="" />
+							<input class="toysi-form-control form-control" name="tsLogin" type="text" placeholder="Логин" value="" />
 						</div>
 					</div>
 					<div class="toysi-form-group form-group">
 						<div class="toysi-login-input-width">
-							<input class="toysi-form-control form-control" name="tsPass" placeholder="Пароль" value="" />
+							<input class="toysi-form-control form-control" name="tsPass" type="password" placeholder="Пароль" value="" />
 						</div>
 					</div>
 					<div class="toysi-form-group form-group">
@@ -58,11 +58,11 @@
 				<div class="form-horizontal">
 					<div class="toysi-form-group form-group">
 						<div class="toysi-password-reset-input-width">
-							<input class="toysi-form-control form-control" name="tsEmail" placeholder="Емайл" value="" />
+							<input class="toysi-form-control form-control" name="tsEmail" type="text" placeholder="Емайл" value="" />
 						</div>
 					</div>
 					<div class="toysi-form-group form-group">
-						<button type="submit" class="toysi-btn toysi-btn-red btn pull-left">Восстановить</button>
+						<button type="button" class="toysi-btn toysi-btn-red btn pull-left">Восстановить</button>
 					</div>
 				</div>
 			</div>
