--- a/reg.html
+++ b/reg.html
@@ -55,7 +55,7 @@
 						<div class="col-sm-6 toysi-necessarily">
 							<input name="" type="text" class="toysi-form-control form-control" placeholder="Название компании" value="" /><s class="toysi-point"></s>
 						</div>
-						<div class="col-sm-6 toysi-necessarily">
+						<div class="col-sm-6 toysi-necessarily has-error">
 							<input name="" type="text" class="toysi-form-control form-control" placeholder="Номер телефона" value="" /><s class="toysi-point"></s>
 						</div>
 					</div>
@@ -70,7 +70,7 @@
 								</div>
 							</div>
 							<div class="form-group">
-								<div class="col-sm-12 toysi-necessarily">
+								<div class="col-sm-12 toysi-necessarily has-error">
 									<select class="toysi-form-control form-control" name="">
 										<option value="" selected disabled>Город</option>
 									</select>
