--- a/oformlenie_zakaza.html
+++ b/oformlenie_zakaza.html
@@ -28,6 +28,14 @@
 		<div class="container">
 			<p class="toysi-cart-text-info">Сумма заказа должна быть не менее 1000 гривен.</p>
 			<table class="table table-striped">
+				<col width="17">
+				<col width="102">
+				<col width="242">
+				<col width="103">
+				<col width="91">
+				<col width="137">
+				<col width="61">
+				<col width="65">
 				<thead>
 					<tr>
 						<th>№</th>
@@ -43,38 +51,60 @@
 				<tbody>
 					<tr>
 						<td>1</td>
-						<td><img src="images/cart-image.png" width="55" height="40" alt="" title="" /></td>
+						<td class="text-center"><img src="images/cart-image.png" width="55" height="40" alt="" title="" /></td>
 						<td>"Brick" "Ninja" (арт.9744-9746)</td>
-						<td>9.76 грн.</td>
+						<td class="toysi-price">9.76 грн.</td>
 						<td>0 баллов</td>
 						<td>
 							<div class="toysi-count-product">
 								<a class="toysi-count-control toysi-count-left"></a>
-								<input class="toysi-count-inpit" name="" value="12 шт." type="text" />
+								<input class="toysi-count-input" name="" value="12 шт." type="text" />
 								<a class="toysi-count-control toysi-count-right"></a>
 							</div>
 						</td>
-						<td>117.12</td>
+						<td class="toysi-sum">117.12</td>
 						<td class="text-center"><a class="toysi-remove-product glyphicon glyphicon-remove"></a></td>
 					</tr>
 					<tr>
 						<td>2</td>
-						<td><img src="images/cart-image.png" width="55" height="40" alt="" title="" /></td>
+						<td class="text-center"><img src="images/cart-image.png" width="55" height="40" alt="" title="" /></td>
 						<td>Круг c музыкой и ручками ZOO</td>
-						<td>93.6 грн.</td>
+						<td class="toysi-price">93.6 грн.</td>
 						<td>0 баллов</td>
 						<td>
 							<div class="toysi-count-product">
 								<a class="toysi-count-control toysi-count-left"></a>
-								<input class="toysi-count-inpit" name="" value="2 шт." type="text" />
+								<input class="toysi-count-input" name="" value="2 шт." type="text" />
 								<a class="toysi-count-control toysi-count-right"></a>
 							</div>
 						</td>
-						<td>187.12</td>
+						<td class="toysi-sum">187.12</td>
 						<td class="text-center"><a class="toysi-remove-product glyphicon glyphicon-remove"></a></td>
 					</tr>
 				</tbody>
 			</table>
+			<div class="clearfix">
+				<div class="toysi-top-line pull-right">
+					<table>
+						<col width="71">
+						<col width="67">
+						<col width="258">
+						<col width="151">
+						<thead>
+							<tr>
+								<th class="text-right">Итого</th>
+								<th></th>
+								<th class="toysi-outcome-ball">0</th>
+								<th class="toysi-outcome-sum">46,008.36 грн.</th>
+							</tr>
+						</thead>
+					</table>
+				</div>
+			</div>
+			<div class="toysi-cart-buttton-container text-center">
+				<a href="#" class="toysi-update-order toysi-btn toysi-btn-red btn">Обновить заказ</a>
+				<a href="#" class="toysi-checkout toysi-btn toysi-btn-red btn">Оформить заказ</a>
+			</div>
 		</div>
 	</div>
 
