--- a/login.html
+++ b/login.html
@@ -16,17 +16,19 @@
 		</div>
 	</div>
 	<div class="toysi-blue-bg toysi-bottom-box-shadow toysi-title-page-height">
-		<div class="container">
-			<h1 class="toysi-login-page-container toysi-title-page">Вход</h1>
+		<div class="container clearfix">
+			<h1 class="toysi-login-page-container toysi-title-page pull-left">Вход</h1>
+			<a class="toysi-title-link pull-right" href="#">Регистрация</a>
 		</div>
 	</div>
 	<div class="toysi-white-bg">
 		<div class="container">
 			<div class="toysi-login-page-container">
 				<form class="form-horizontal">
-					<div class="toysi-form-group form-group">
+					<p class="toysi-text-danger">Не верный логин или пароль!</p>
+					<div class="toysi-form-group form-group has-error">
 						<div class="toysi-login-input-width">
-							<input class="toysi-form-control form-control" name="tsLogin" type="text" placeholder="Логин" value="" />
+							<input class="toysi-form-control form-control pull-left" name="tsLogin" type="text" placeholder="Логин" value="" />
 						</div>
 					</div>
 					<div class="toysi-form-group form-group">
