--- a/oformlenie_zakaza.html
+++ b/oformlenie_zakaza.html
@@ -16,11 +16,9 @@
 		</div>
 	</div>
 	<div class="toysi-blue-bg toysi-bottom-box-shadow toysi-title-page-height">
-		<div class="container">
-			<div class="clearfix">
-				<h1 class="toysi-title-page pull-left">Корзина</h1>
-				<a class="toysi-title-link pull-right" href="#">Вернуться к выбору товаров</a>
-			</div>
+		<div class="container clearfix">
+			<h1 class="toysi-title-page pull-left">Корзина</h1>
+			<a class="toysi-title-link pull-right" href="#">Вернуться к выбору товаров</a>
 		</div>
 	</div>
 
