--- a/login.html
+++ b/login.html
@@ -24,20 +24,20 @@
 	<div class="toysi-white-bg">
 		<div class="container">
 			<div class="toysi-login-page-container">
-				<form class="form-horizontal">
-					<p class="toysi-text-danger">Не верный логин или пароль!</p>
-					<div class="toysi-form-group form-group has-error">
+				<form class="form-horizontal" method="post">
+					<p class="toysi-text-danger hide">Не верный логин или пароль!</p>
+					<div class="toysi-form-group form-group">
 						<div class="toysi-login-input-width">
-							<input class="toysi-form-control form-control pull-left" name="tsLogin" type="text" placeholder="Логин" value="" />
+							<input class="toysi-form-control toysi-form-verify form-control pull-left" name="tsLogin" type="text" placeholder="Логин" value="" />
 						</div>
 					</div>
 					<div class="toysi-form-group form-group">
 						<div class="toysi-login-input-width">
-							<input class="toysi-form-control form-control" name="tsPass" type="password" placeholder="Пароль" value="" />
+							<input class="toysi-form-control toysi-form-verify form-control" name="tsPass" type="password" placeholder="Пароль" value="" />
 						</div>
 					</div>
 					<div class="toysi-form-group form-group">
-						<button type="submit" class="toysi-btn toysi-btn-red btn pull-left">Войти</button>
+						<button type="submit" class="toysi-login-btn toysi-btn toysi-btn-red btn pull-left">Войти</button>
 						<div class="toysi-pull-left pull-left">
 							<div class="toysi-checkbox-control">
 								<input type="checkbox" name="tsRememberPass" id="tsRememberPass" checked />
