--- a/index.html
+++ b/index.html
@@ -3,8 +3,128 @@
 <head lang="ru">
 	<meta charset="UTF-8">
 	<title></title>
+	<link rel="stylesheet" href="css/bootstrap.min.css" />
+	<link rel="stylesheet" href="css/bootstrap-theme.min.css" />
+	<link rel="stylesheet" href="css/common.css" />
+	<link rel="stylesheet" href="css/index.css" />
 </head>
 <body>
+<div class="toysi-page">
+	<div class="toysi-nav-head">
+		<div class="container clearfix">
+			<ul class="toysi-nav pull-left">
+				<li><a>О Компании</a></li>
+				<li><a>Cотрудничество</a></li>
+				<li><a>Контакты</a></li>
+			</ul>
+			<div class="toysi-head-phones pull-left">
+				<ul class="">
+					<li>+38 067 543 03 40</li>
+					<li>+38 067 566 87 66</li>
+					<li>+38 067 628 41 00</li>
+				</ul>
+			</div>
+			<div class="toysi-user-container pull-right">
+				<div class="toysi-user-joined">
+					<a class="toysi-personal-account" title="Вася Пупкин">Вася Пупкин</a>
+					<a class="toysi-exit-account">Выход</a>
+					<a class="toysi-cart">Корзина</a>
+					<span class="toysi-amount">: 12 345 грн.</span>
+					<span class="toysi-quantity"> 12 товаров</span>
+					<a class="toysi-btn-small toysi-btn toysi-btn-red btn">Оформить заказ</a>
+				</div>
+				<div class="toysi-user-login hide">
+					<a>Войти</a>
+					<a>Регистрация</a>
+				</div>
+			</div>
+		</div>
+	</div>
 
+	<div class="toysi-white-bg">
+		<div class="container clearfix">
+			<div class="toysi-content-relative pull-right">
+				<div class="toysi-content">
+					right
+				</div>
+			</div>
+			<div class="toysi-left-nav pull-left">
+				<div class="toysi-logo-container">
+					<a class="toysi-logo"><img src="images/logo.png" width="127" height="94" title="" alt="" /></a>
+					<p class="toysi-logo-text">Оптовый интернет магазин детских игрушек</p>
+				</div>
+				<div class="toysi-search-container">
+					<form class="form-horizontal">
+						<div class="form-group">
+							<div class="toysi-search-control">
+								<div class="input-group">
+									<input class="form-control" type="text">
+									<span class="input-group-btn">
+										<button class="btn btn-default glyphicon glyphicon-search" type="button"></button>
+									</span>
+								</div>
+							</div>
+						</div>
+					</form>
+				</div>
+				<div class="toysi-nav-container">
+					<ul>
+						<li class="toysi-group toysi-open">
+							<a>Спотривные товары</a>
+							<ul>
+								<li><a>Футбольный инвентарь (5)</a></li>
+								<li><a>Баскетбол (14)</a></li>
+								<li><a>Волейбол (14)</a></li>
+								<li><a>Дартсы (13)</a></li>
+								<li><a>Боулинги (12)</a></li>
+								<li><a>Аксессуары для надувных (0)</a></li>
+								<li><a>кроватей (13)</a></li>
+								<li class="active"><a>Ролики (20)</a></li>
+								<li><a>Санки (8)</a></li>
+							</ul>
+						</li>
+						<li><a>Новинки</a></li>
+						<li><a>Акция</a></li>
+						<li><a>Батарейки</a></li>
+						<li><a>КиндеренОК</a></li>
+						<li class="toysi-group"><a>Коврики Babypol</a></li>
+						<li class="toysi-group"><a>Круги Baby Swimmer</a></li>
+						<li class="toysi-group"><a>Крупногабарит</a></li>
+						<li><a>Летний ассортимент</a></li>
+						<li class="toysi-group"><a>Мягкие игрушки</a></li>
+						<li><a>Пазлы Castorland</a></li>
+						<li><a>Пазлы, хлопушки</a></li>
+						<li><a>Развивающие игры</a></li>
+						<li><a>Спорттовары</a></li>
+						<li><a>Товары для девочек</a></li>
+						<li><a>Товары для детей</a></li>
+						<li><a>Товары для мальчиков</a></li>
+						<li><a>Последние поступления</a></li>
+					</ul>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<div class="toysi-footer toysi-blue-bg">
+		<div class="container clearfix">
+			<p class="pull-left">© 2012–2014 Toysi.com.ua</p>
+			<ul class="toysi-nav pull-left">
+				<li class="active"><a>О Компании</a></li>
+				<li><a>Cотрудничество</a></li>
+				<li><a>Контакты</a></li>
+			</ul>
+			<div class="toysi-footer-contact pull-right">
+				<p>ул. Алма-Атинская, 35а.<br />Склад №7</p>
+			</div>
+			<div class="toysi-footer-contact pull-right">
+				<p>+38 067 543 03 40<br />+38 067 566 87 66<br />+38 067 628 41 00</p>
+			</div>
+		</div>
+	</div>
+</div>
+<script src="js/jquery-1.11.1.js" type="text/javascript"></script>
+<script src="js/common.js" type="text/javascript"></script>
+<script src="js/index.js" type="text/javascript"></script>
 </body>
 </html>
