Index page (slider)

--- a/index.html
+++ b/index.html
@@ -45,7 +45,46 @@
 		<div class="container clearfix">
 			<div class="toysi-content-relative pull-right">
 				<div class="toysi-content">
-					right
+					<div class="toysi-slider-container">
+						<div class="toysi-bottom-box-shadow">
+							<ul class="toysi-slider-content">
+								<li><img src="images/slider.jpg" width="735" height="187"></li>
+								<li><img src="images/slider2.jpg" width="735" height="187"></li>
+								<li><img src="images/slider3.jpg" width="735" height="187"></li>
+							</ul>
+						</div>
+						<ul class="toysi-slider-pages">
+							<li class="active"></li>
+							<li></li>
+							<li></li>
+						</ul>
+						<a class="toysi-slider-nav-last"></a>
+						<a class="toysi-slider-nav-next"></a>
+					</div>
+					<table class="toysi-shop-info table">
+						<tbody>
+							<tr>
+								<td class="">
+									<p class="lead">О компании</p>
+									<p>Наша компания занимает одну из лидирующих позиций на рынке детских товаров в Украине. Наши товары от более чем 100 производителей и брендов Украны, Китая, Польши, Белоруссии и Германии.</p>
+								</td>
+								<td class="">
+									<p class="lead">Cash & Carry</p>
+									<p>Вы можете самостоятельно выбрать подходящие товары нужного цвета, нужного количества и в надлежащем состоянии.</p>
+								</td>
+							</tr>
+							<tr>
+								<td class="">
+									<p class="lead">Доставка</p>
+									<p>Бесплатная доставка по городу и области! Доставка на территории Украины - ?</p>
+								</td>
+								<td class="">
+									<p class="lead">Возврат и брак</p>
+									<p>Мы производим обмен товара, но доставка обмена и брака производится клиентом.</p>
+								</td>
+							</tr>
+						</tbody>
+					</table>
 				</div>
 			</div>
 			<div class="toysi-left-nav pull-left">
