--- a/index.html
+++ b/index.html
@@ -47,19 +47,15 @@
 				<div class="toysi-content">
 					<div class="toysi-slider-container">
 						<div class="toysi-bottom-box-shadow">
-							<ul class="toysi-slider-content">
+							<ul class="toysi-slider-content slider-content">
 								<li><img src="images/slider.jpg" width="735" height="187"></li>
 								<li><img src="images/slider2.jpg" width="735" height="187"></li>
 								<li><img src="images/slider3.jpg" width="735" height="187"></li>
 							</ul>
 						</div>
-						<ul class="toysi-slider-pages">
-							<li class="active"></li>
-							<li></li>
-							<li></li>
-						</ul>
-						<a class="toysi-slider-nav-last"></a>
-						<a class="toysi-slider-nav-next"></a>
+						<ul class="toysi-slider-pages slider-pages"></ul>
+						<a class="toysi-slider-nav-prev slider-nav-prev"></a>
+						<a class="toysi-slider-nav-next slider-nav-next"></a>
 					</div>
 					<table class="toysi-shop-info table">
 						<tbody>
