Index page product container

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 				</ul>
 			</div>
 			<div class="toysi-user-container pull-right">
-				<div class="toysi-user-joined">
+				<div class="toysi-user-joined hide">
 					<a class="toysi-personal-account" title="Вася Пупкин">Вася Пупкин</a>
 					<a class="toysi-exit-account">Выход</a>
 					<a class="toysi-cart">Корзина</a>
@@ -33,7 +33,7 @@
 					<span class="toysi-quantity"> 12 товаров</span>
 					<a class="toysi-btn-small toysi-btn toysi-btn-red btn">Оформить заказ</a>
 				</div>
-				<div class="toysi-user-login hide">
+				<div class="toysi-user-login">
 					<a>Войти</a>
 					<a>Регистрация</a>
 				</div>
@@ -44,6 +44,7 @@
 	<div class="toysi-white-bg">
 		<div class="container clearfix">
 			<div class="toysi-content-relative pull-right">
+				<div class="toysi-bg-content"></div>
 				<div class="toysi-content">
 					<div class="toysi-slider-container">
 						<div class="toysi-bottom-box-shadow">
@@ -81,7 +82,277 @@
 							</tr>
 						</tbody>
 					</table>
+					<div class="toysi-title-category-container clearfix">
+						<div class="pull-left">
+							<h1>Новинки</h1>
+							<span>23 товара</span>
+						</div>
+						<a class="pull-right">Все новинки</a>
+					</div>
+					<div class="toysi-product-list-container">
+						<ul>
+							<li>
+								<div>
+									<a class="toysi-product-list-container__title">Машинка Dodge Viper GTS Coupe и еще много букв которые всеравно влезают</a>
+									<img src="images/car.jpg" width="155" height="130" title="Машинка Dodge Viper GTS Coupe и еще много букв которые всеравно влезают" alt="Машинка Dodge Viper GTS Coupe и еще много букв которые всеравно влезают" />
+									<div class="toysi-product-list-container__user-joined">
+										<p class="toysi-product-list-container__to-store">На складе: 123 шт.</p>
+										<p class="toysi-product-list-container__price">34 <small>грн.</small></p>
+										<button class="toysi-product-list-container__in-cart">В корзину</button>
+										<div class="toysi-hide">
+											<div class="toysi-product-list-container__counter-container">
+												<div class="toysi-product-list-container__counter">
+													<button class="toysi-product-list-container__control toysi-product-list-container__control-up"></button>
+													<input class="toysi-product-list-container__input-count" type="text" value="1 шт." name="tsCountProduct" />
+													<button class="toysi-product-list-container__control toysi-product-list-container__control-down"></button>
+												</div>
+												<div class="toysi-product-list-container__buttons-count">
+													<button>+ 5</button>
+													<button>+ 15</button>
+													<button>+ 25</button>
+												</div>
+											</div>
+											<p class="toysi-product-list-container__comment-title">Ваш комментарий:</p>
+											<textarea class="toysi-product-list-container__text"></textarea>
+										</div>
+									</div>
+									<div class="toysi-product-list-container__user-no-joined hide">
+										<p>Узнать цену</p>
+										<a class="toysi-btn toysi-btn-red toysi-btn-small btn">Регистрация</a>
+									</div>
+								</div>
+							</li>
+							<li>
+								<div>
+									<a class="toysi-product-list-container__title">Машинка Dodge Viper GTS Coupe и еще много букв которые всеравно влезают</a>
+									<img src="images/car.jpg" width="155" height="130" title="Машинка Dodge Viper GTS Coupe и еще много букв которые всеравно влезают" alt="Машинка Dodge Viper GTS Coupe и еще много букв которые всеравно влезают" />
+									<div class="toysi-product-list-container__user-joined">
+										<p class="toysi-product-list-container__to-store">На складе: 123 шт.</p>
+										<p class="toysi-product-list-container__price">34 <small>грн.</small></p>
+										<button class="toysi-product-list-container__in-cart">В корзину</button>
+										<div class="toysi-hide">
+											<div class="toysi-product-list-container__counter-container">
+												<div class="toysi-product-list-container__counter">
+													<button class="toysi-product-list-container__control toysi-product-list-container__control-up"></button>
+													<input class="toysi-product-list-container__input-count" type="text" value="1 шт." name="tsCountProduct" />
+													<button class="toysi-product-list-container__control toysi-product-list-container__control-down"></button>
+												</div>
+												<div class="toysi-product-list-container__buttons-count">
+													<button>+ 5</button>
+													<button>+ 15</button>
+													<button>+ 25</button>
+												</div>
+											</div>
+											<p class="toysi-product-list-container__comment-title">Ваш комментарий:</p>
+											<textarea class="toysi-product-list-container__text"></textarea>
+										</div>
+									</div>
+									<div class="toysi-product-list-container__user-no-joined hide">
+										<p>Узнать цену</p>
+										<a class="toysi-btn toysi-btn-red toysi-btn-small btn">Регистрация</a>
+									</div>
+								</div>
+							</li>
+							<li>
+								<div>
+									<a class="toysi-product-list-container__title">Машинка Dodge Viper GTS Coupe и еще много букв которые всеравно влезают</a>
+									<img src="images/car.jpg" width="155" height="130" title="Машинка Dodge Viper GTS Coupe и еще много букв которые всеравно влезают" alt="Машинка Dodge Viper GTS Coupe и еще много букв которые всеравно влезают" />
+									<div class="toysi-product-list-container__user-joined">
+										<p class="toysi-product-list-container__to-store">На складе: 123 шт.</p>
+										<p class="toysi-product-list-container__price">34 <small>грн.</small></p>
+										<button class="toysi-product-list-container__in-cart">В корзину</button>
+										<div class="toysi-hide">
+											<div class="toysi-product-list-container__counter-container">
+												<div class="toysi-product-list-container__counter">
+													<button class="toysi-product-list-container__control toysi-product-list-container__control-up"></button>
+													<input class="toysi-product-list-container__input-count" type="text" value="1 шт." name="tsCountProduct" />
+													<button class="toysi-product-list-container__control toysi-product-list-container__control-down"></button>
+												</div>
+												<div class="toysi-product-list-container__buttons-count">
+													<button>+ 5</button>
+													<button>+ 15</button>
+													<button>+ 25</button>
+												</div>
+											</div>
+											<p class="toysi-product-list-container__comment-title">Ваш комментарий:</p>
+											<textarea class="toysi-product-list-container__text"></textarea>
+										</div>
+									</div>
+									<div class="toysi-product-list-container__user-no-joined hide">
+										<p>Узнать цену</p>
+										<a class="toysi-btn toysi-btn-red toysi-btn-small btn">Регистрация</a>
+									</div>
+								</div>
+							</li>
+							<li>
+								<div>
+									<a class="toysi-product-list-container__title">Машинка Dodge Viper GTS Coupe и еще много букв которые всеравно влезают</a>
+									<img src="images/car.jpg" width="155" height="130" title="Машинка Dodge Viper GTS Coupe и еще много букв которые всеравно влезают" alt="Машинка Dodge Viper GTS Coupe и еще много букв которые всеравно влезают" />
+									<div class="toysi-product-list-container__user-joined">
+										<p class="toysi-product-list-container__to-store">На складе: 123 шт.</p>
+										<p class="toysi-product-list-container__price">34 <small>грн.</small></p>
+										<button class="toysi-product-list-container__in-cart">В корзину</button>
+										<div class="toysi-hide">
+											<div class="toysi-product-list-container__counter-container">
+												<div class="toysi-product-list-container__counter">
+													<button class="toysi-product-list-container__control toysi-product-list-container__control-up"></button>
+													<input class="toysi-product-list-container__input-count" type="text" value="1 шт." name="tsCountProduct" />
+													<button class="toysi-product-list-container__control toysi-product-list-container__control-down"></button>
+												</div>
+												<div class="toysi-product-list-container__buttons-count">
+													<button>+ 5</button>
+													<button>+ 15</button>
+													<button>+ 25</button>
+												</div>
+											</div>
+											<p class="toysi-product-list-container__comment-title">Ваш комментарий:</p>
+											<textarea class="toysi-product-list-container__text"></textarea>
+										</div>
+									</div>
+									<div class="toysi-product-list-container__user-no-joined hide">
+										<p>Узнать цену</p>
+										<a class="toysi-btn toysi-btn-red toysi-btn-small btn">Регистрация</a>
+									</div>
+								</div>
+							</li>
+							<li>
+								<div>
+									<a class="toysi-product-list-container__title">Машинка Dodge Viper GTS Coupe и еще много букв которые всеравно влезают</a>
+									<img src="images/car.jpg" width="155" height="130" title="Машинка Dodge Viper GTS Coupe и еще много букв которые всеравно влезают" alt="Машинка Dodge Viper GTS Coupe и еще много букв которые всеравно влезают" />
+									<div class="toysi-product-list-container__user-joined">
+										<p class="toysi-product-list-container__to-store">На складе: 123 шт.</p>
+										<p class="toysi-product-list-container__price">34 <small>грн.</small></p>
+										<button class="toysi-product-list-container__in-cart">В корзину</button>
+										<div class="toysi-hide">
+											<div class="toysi-product-list-container__counter-container">
+												<div class="toysi-product-list-container__counter">
+													<button class="toysi-product-list-container__control toysi-product-list-container__control-up"></button>
+													<input class="toysi-product-list-container__input-count" type="text" value="1 шт." name="tsCountProduct" />
+													<button class="toysi-product-list-container__control toysi-product-list-container__control-down"></button>
+												</div>
+												<div class="toysi-product-list-container__buttons-count">
+													<button>+ 5</button>
+													<button>+ 15</button>
+													<button>+ 25</button>
+												</div>
+											</div>
+											<p class="toysi-product-list-container__comment-title">Ваш комментарий:</p>
+											<textarea class="toysi-product-list-container__text"></textarea>
+										</div>
+									</div>
+									<div class="toysi-product-list-container__user-no-joined hide">
+										<p>Узнать цену</p>
+										<a class="toysi-btn toysi-btn-red toysi-btn-small btn">Регистрация</a>
+									</div>
+								</div>
+							</li>
+							<li>
+								<div>
+									<a class="toysi-product-list-container__title">Машинка Dodge Viper GTS Coupe и еще много букв которые всеравно влезают</a>
+									<img src="images/car.jpg" width="155" height="130" title="Машинка Dodge Viper GTS Coupe и еще много букв которые всеравно влезают" alt="Машинка Dodge Viper GTS Coupe и еще много букв которые всеравно влезают" />
+									<div class="toysi-product-list-container__user-joined">
+										<p class="toysi-product-list-container__to-store">На складе: 123 шт.</p>
+										<p class="toysi-product-list-container__price">34 <small>грн.</small></p>
+										<button class="toysi-product-list-container__in-cart">В корзину</button>
+										<div class="toysi-hide">
+											<div class="toysi-product-list-container__counter-container">
+												<div class="toysi-product-list-container__counter">
+													<button class="toysi-product-list-container__control toysi-product-list-container__control-up"></button>
+													<input class="toysi-product-list-container__input-count" type="text" value="1 шт." name="tsCountProduct" />
+													<button class="toysi-product-list-container__control toysi-product-list-container__control-down"></button>
+												</div>
+												<div class="toysi-product-list-container__buttons-count">
+													<button>+ 5</button>
+													<button>+ 15</button>
+													<button>+ 25</button>
+												</div>
+											</div>
+											<p class="toysi-product-list-container__comment-title">Ваш комментарий:</p>
+											<textarea class="toysi-product-list-container__text"></textarea>
+										</div>
+									</div>
+									<div class="toysi-product-list-container__user-no-joined hide">
+										<p>Узнать цену</p>
+										<a class="toysi-btn toysi-btn-red toysi-btn-small btn">Регистрация</a>
+									</div>
+								</div>
+							</li>
+							<li>
+								<div>
+									<a class="toysi-product-list-container__title">Машинка Dodge Viper GTS Coupe и еще много букв которые всеравно влезают</a>
+									<img src="images/car.jpg" width="155" height="130" title="Машинка Dodge Viper GTS Coupe и еще много букв которые всеравно влезают" alt="Машинка Dodge Viper GTS Coupe и еще много букв которые всеравно влезают" />
+									<div class="toysi-product-list-container__user-joined">
+										<p class="toysi-product-list-container__to-store">На складе: 123 шт.</p>
+										<p class="toysi-product-list-container__price">34 <small>грн.</small></p>
+										<button class="toysi-product-list-container__in-cart">В корзину</button>
+										<div class="toysi-hide">
+											<div class="toysi-product-list-container__counter-container">
+												<div class="toysi-product-list-container__counter">
+													<button class="toysi-product-list-container__control toysi-product-list-container__control-up"></button>
+													<input class="toysi-product-list-container__input-count" type="text" value="1 шт." name="tsCountProduct" />
+													<button class="toysi-product-list-container__control toysi-product-list-container__control-down"></button>
+												</div>
+												<div class="toysi-product-list-container__buttons-count">
+													<button>+ 5</button>
+													<button>+ 15</button>
+													<button>+ 25</button>
+												</div>
+											</div>
+											<p class="toysi-product-list-container__comment-title">Ваш комментарий:</p>
+											<textarea class="toysi-product-list-container__text"></textarea>
+										</div>
+									</div>
+									<div class="toysi-product-list-container__user-no-joined hide">
+										<p>Узнать цену</p>
+										<a class="toysi-btn toysi-btn-red toysi-btn-small btn">Регистрация</a>
+									</div>
+								</div>
+							</li>
+							<li>
+								<div>
+									<a class="toysi-product-list-container__title">Машинка Dodge Viper GTS Coupe и еще много букв которые всеравно влезают</a>
+									<img src="images/car.jpg" width="155" height="130" title="Машинка Dodge Viper GTS Coupe и еще много букв которые всеравно влезают" alt="Машинка Dodge Viper GTS Coupe и еще много букв которые всеравно влезают" />
+									<div class="toysi-product-list-container__user-joined">
+										<p class="toysi-product-list-container__to-store">На складе: 123 шт.</p>
+										<p class="toysi-product-list-container__price">34 <small>грн.</small></p>
+										<button class="toysi-product-list-container__in-cart">В корзину</button>
+										<div class="toysi-hide">
+											<div class="toysi-product-list-container__counter-container">
+												<div class="toysi-product-list-container__counter">
+													<button class="toysi-product-list-container__control toysi-product-list-container__control-up"></button>
+													<input class="toysi-product-list-container__input-count" type="text" value="1 шт." name="tsCountProduct" />
+													<button class="toysi-product-list-container__control toysi-product-list-container__control-down"></button>
+												</div>
+												<div class="toysi-product-list-container__buttons-count">
+													<button>+ 5</button>
+													<button>+ 15</button>
+													<button>+ 25</button>
+												</div>
+											</div>
+											<p class="toysi-product-list-container__comment-title">Ваш комментарий:</p>
+											<textarea class="toysi-product-list-container__text"></textarea>
+										</div>
+									</div>
+									<div class="toysi-product-list-container__user-no-joined hide">
+										<p>Узнать цену</p>
+										<a class="toysi-btn toysi-btn-red toysi-btn-small btn">Регистрация</a>
+									</div>
+								</div>
+							</li>
+						</ul>
+						<div class="clearfix"></div>
+					</div>
+					<div class="toysi-action-carousel-container">
+						<div class="toysi-title-category-container clearfix">
+							<div class="pull-left">
+								<h1>Акционные</h1>
+								<span>10 товаров</span>
+							</div>
+							<a class="pull-right">Показать все</a>
+						</div>
+					</div>
 				</div>
+
 			</div>
 			<div class="toysi-left-nav pull-left">
 				<div class="toysi-logo-container">
