--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
 							</li>
 							<li>
 								<div>
-									<a class="toysi-product-list-container__title">Машинка Dodge Viper GTS Coupe и еще много букв которые всеравно влезают</a>
+									<a class="toysi-product-list-container__title">Машинка Dodge Viper GTS Coupe</a>
 									<img src="images/car.jpg" width="155" height="130" title="Машинка Dodge Viper GTS Coupe и еще много букв которые всеравно влезают" alt="Машинка Dodge Viper GTS Coupe и еще много букв которые всеравно влезают" />
 									<div class="toysi-product-list-container__user-joined">
 										<p class="toysi-product-list-container__to-store">На складе: 123 шт.</p>
@@ -306,6 +306,7 @@
 										<p>Узнать цену</p>
 										<a class="toysi-btn toysi-btn-red toysi-btn-small btn">Регистрация</a>
 									</div>
+									<div class="toysi-action-product"></div>
 								</div>
 							</li>
 							<li>
@@ -350,9 +351,121 @@
 							</div>
 							<a class="pull-right">Показать все</a>
 						</div>
+
+						<div class="toysi-product-list-container">
+							<ul>
+								<li>
+									<div>
+										<a class="toysi-product-list-container__title">Машинка Dodge Viper GTS Coupe и еще много букв которые всеравно влезают</a>
+										<img src="images/car.jpg" width="155" height="130" title="Машинка Dodge Viper GTS Coupe и еще много букв которые всеравно влезают" alt="Машинка Dodge Viper GTS Coupe и еще много букв которые всеравно влезают" />
+										<div class="toysi-product-list-container__user-joined">
+											<p class="toysi-product-list-container__to-store">На складе: 123 шт.</p>
+											<div class="clearfix">
+												<p class="toysi-product-list-container__price pull-left">34 <small>грн.</small></p>
+												<p class="toysi-product-list-container__old-price pull-right">34 <small>грн.</small></p>
+											</div>
+										</div>
+										<div class="toysi-action-product"></div>
+									</div>
+								</li>
+								<li>
+									<div>
+										<a class="toysi-product-list-container__title">Машинка Dodge Viper GTS Coupe и еще много букв которые всеравно влезают</a>
+										<img src="images/car.jpg" width="155" height="130" title="Машинка Dodge Viper GTS Coupe и еще много букв которые всеравно влезают" alt="Машинка Dodge Viper GTS Coupe и еще много букв которые всеравно влезают" />
+										<div class="toysi-product-list-container__user-joined">
+											<p class="toysi-product-list-container__to-store">На складе: 123 шт.</p>
+											<div class="clearfix">
+												<p class="toysi-product-list-container__price pull-left">34 <small>грн.</small></p>
+												<p class="toysi-product-list-container__old-price pull-right">34 <small>грн.</small></p>
+											</div>
+										</div>
+										<div class="toysi-action-product"></div>
+									</div>
+								</li>
+								<li>
+									<div>
+										<a class="toysi-product-list-container__title">Машинка Dodge Viper GTS Coupe и еще много букв которые всеравно влезают</a>
+										<img src="images/car.jpg" width="155" height="130" title="Машинка Dodge Viper GTS Coupe и еще много букв которые всеравно влезают" alt="Машинка Dodge Viper GTS Coupe и еще много букв которые всеравно влезают" />
+										<div class="toysi-product-list-container__user-joined">
+											<p class="toysi-product-list-container__to-store">На складе: 123 шт.</p>
+											<div class="clearfix">
+												<p class="toysi-product-list-container__price pull-left">34 <small>грн.</small></p>
+												<p class="toysi-product-list-container__old-price pull-right">34 <small>грн.</small></p>
+											</div>
+										</div>
+										<div class="toysi-action-product"></div>
+									</div>
+								</li>
+								<li>
+									<div>
+										<a class="toysi-product-list-container__title">Машинка Dodge Viper GTS Coupe и еще много букв которые всеравно влезают</a>
+										<img src="images/car.jpg" width="155" height="130" title="Машинка Dodge Viper GTS Coupe и еще много букв которые всеравно влезают" alt="Машинка Dodge Viper GTS Coupe и еще много букв которые всеравно влезают" />
+										<div class="toysi-product-list-container__user-joined">
+											<p class="toysi-product-list-container__to-store">На складе: 123 шт.</p>
+											<div class="clearfix">
+												<p class="toysi-product-list-container__price pull-left">34 <small>грн.</small></p>
+												<p class="toysi-product-list-container__old-price pull-right">34 <small>грн.</small></p>
+											</div>
+										</div>
+										<div class="toysi-action-product"></div>
+									</div>
+								</li>
+								<li>
+									<div>
+										<a class="toysi-product-list-container__title">Машинка Dodge Viper GTS Coupe и еще много букв которые всеравно влезают</a>
+										<img src="images/car.jpg" width="155" height="130" title="Машинка Dodge Viper GTS Coupe и еще много букв которые всеравно влезают" alt="Машинка Dodge Viper GTS Coupe и еще много букв которые всеравно влезают" />
+										<div class="toysi-product-list-container__user-joined">
+											<p class="toysi-product-list-container__to-store">На складе: 123 шт.</p>
+											<div class="clearfix">
+												<p class="toysi-product-list-container__price pull-left">34 <small>грн.</small></p>
+												<p class="toysi-product-list-container__old-price pull-right">34 <small>грн.</small></p>
+											</div>
+										</div>
+										<div class="toysi-action-product"></div>
+									</div>
+								</li>
+							</ul>
+							<div class="clearfix"></div>
+							<div class="toysi-carousel-control"></div>
+						</div>
+					</div>
+					<div class="toysi-map-container">
+						<h1>Как нас найти?</h1>
+						<div class="toysi-map">
+							<img src="images/map.jpg" width="763" height="440" title="Как нас найти?" alt="Как нас найти?" />
+						</div>
+						<div class="toysi-margin-left-56">
+							<h2>Общественным транспортом:</h2>
+							<div class="clearfix">
+								<div class="toysi-num-contact pull-left">
+									1
+								</div>
+								<div class="toysi-text-contact pull-left">
+									От м. Черниговская — маршрутка 33, 533, трамваи №23 и №33;
+								</div>
+							</div>
+							<div class="clearfix">
+								<div class="toysi-num-contact pull-left">
+									2
+								</div>
+								<div class="toysi-text-contact pull-left">
+									С Московской площади через м. Дружбы народов, маршрутка № 211 до остановки «Укроптбакалея»
+								</div>
+							</div>
+							<h2>Позвонить нам:</h2>
+							<div class="clearfix">
+								<div class="toysi-phone-image pull-left">
+									<img src="images/phone.png" width="41" height="26" title="" alt="" />
+								</div>
+								<div class="toysi-phones-contact pull-left">
+									+38 067 543 03 40<br />
+									+38 067 566 87 66<br />
+									+38 067 628 41 00
+								</div>
+							</div>
+						</div>
 					</div>
 				</div>
-
 			</div>
 			<div class="toysi-left-nav pull-left">
 				<div class="toysi-logo-container">
